New website/Personal Website/src/index.css
/* :root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: rgb(121, 153, 190);
background-image: url("flower.jpeg");
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
} */

html {
  /* background-image: url("../src/assets/Background1.png"); */
  background-color: rgb(8, 24, 49);
  /* background-repeat: no-repeat; */
  margin: 5%;
  color: rgb(253, 255, 255);
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  border: #5f5f5f;
  border-style: double;
}
body {
  text-align: left;
}

/* COMPONENTS
 */
.home {
  border: #5f5f5f;
  border-style: double;
  background: #0000004f;
}
/*````````````````````` */
/* LINKS AND A CLASSES */
.links {
  display: flex;
  gap: 10px;
}
.socials {
  width: 50px;
  height: auto;
  /* display: flex; */
  flex-wrap: wrap-reverse;
  /* background-color: #2e18638e; */
  gap: 10px;
}
.socialbox {
  gap: 20px;
}
a {
  font-weight: 500;
  color: #ffffff;
  text-decoration: inherit;
}
a:hover {
  color: #535353;
}
/*```````````````````` */

/* IMAGES */
.studiodrink {
  width: 500px;
}
.hali {
  width: 40%;
  border: rgb(175, 175, 175);
  border-style: double;
  margin: 20px;
}
h1 {
  font-size: 3.2em;
  line-height: 1.1;
}
.nameAndPhoto {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}

/* button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
} */

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

